2nd section now describes and leads to books subpage

--- a/examples/jumbotron/index.html
+++ b/examples/jumbotron/index.html
@@ -71,9 +71,9 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Portfolio</h2>
-          <p>Zapraszam na moje protfolio </p>
-          <p><a class="btn btn-default" href="portfolio.html" role="button">Pokaż Portfolio &raquo;</a></p>
+          <h2>Moja lista książek</h2>
+          <p>Zobacz moje ulubione książki</p>
+          <p><a class="btn btn-default" href="books.html" role="button">Kliknij tu &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>BLOG</h2>
