--- a/examples/jumbotron/index.html
+++ b/examples/jumbotron/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Oto moja osobista strona!</title>
+    <title>This is my personal website</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
@@ -52,7 +52,7 @@
             <div class="form-group">
               <input type="password" placeholder="Password" class="form-control">
             </div>
-            <button type="submit" class="btn btn-warning">Zaloguj się</button>
+            <button type="submit" class="btn btn-warning">Sign in</button>
           </form>
         </div><!--/.navbar-collapse -->
       </div>
@@ -61,7 +61,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Witam na mojej stronie!</h1>
+        <h1>Welcome to my website!</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
@@ -73,17 +73,17 @@
         <div class="col-md-4">
           <h2>Portfolio</h2>
           <p>Zapraszam na moje protfolio </p>
-          <p><a class="btn btn-default" href="portfolio.html" role="button">Pokaż Portfolio &raquo;</a></p>
+          <p><a class="btn btn-default" href="portfolio.html" role="button">View Portfolio &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>BLOG</h2>
           <p>Come and see my programming blog</p>
-          <p><a class="btn btn-default" href="arkanoid.html" role="button">Do bloga &raquo;</a></p>
+          <p><a class="btn btn-default" href="arkanoid.html" role="button">Play Arkanoid &raquo;</a></p>
        </div>
         <div class="col-md-4">
           <h2>VIM Tutorial</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">Dowiedz się więcej &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
       </div>
 
