Added list of books

--- a/examples/jumbotron/books.html
+++ b/examples/jumbotron/books.html
@@ -24,6 +24,11 @@
   </head>
   <body>
 	<h2>Moje ulubione książki</h2>
+	<ul>
+		<li>"Zrozumieć programowanie Coldwin"</li>
+		<li>"Junior developer" Kupilas</li>
+		<li>"Zawód: Programista" Aniserowicz</li>
+	</ul>
 	
  
   </body>
